--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <div class="navbar-logo">SECKER</div>
             <ul class="navbar-menu" id="navLinks">
-                <li><a href="#">Hjem</a></li>
+                <li><a href="../video/index.html">Hjem</a></li>
                 <li><a href="../video/video.html">Videoer</a></li>
                 <li><a href="../apache/apache.html">Apache</a></li>
                 <li><a href="#">Kontakt</a></li>
