--- a/video/video.html
+++ b/video/video.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="navbar-logo">SECKER</div>
             <ul class="navbar-menu" id="navLinks">
-                <li><a href="../inedx.html">Hjem</a></li>
+                <li><a href="../video/index.html">Hjem</a></li>
                 <li><a href="../video/video.html">Videoer</a></li>
                 <li><a href="../video/video.html">Videoer</a></li>
                 <li><a href="#">Kontakt</a></li>
