--- a/video/video.html
+++ b/video/video.html
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <div class="navbar-logo">SECKER</div>
             <ul class="navbar-menu" id="navLinks">
-                <li><a href="../video/index.html">Hjem</a></li>
+                <li><a href="../index.html">Hjem</a></li>
                 <li><a href="../video/video.html">Videoer</a></li>
-                <li><a href="../video/video.html">Videoer</a></li>
+                <li><a href="../Kurs/apache/apache.html">Apache</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
             <div class="navbar-toggle" id="navbar-toggle">
