--- a/video/video.html
+++ b/video/video.html
@@ -8,26 +8,27 @@
 </head>
 <body>
 
-    <header>
-        <nav class="navbar">
-            <div class="navbar-logo">SECKER</div>
-            <ul class="navbar-menu" id="navLinks">
-                <li><a href="../index.html">Hjem</a></li>
-                <li><a href="../video/video.html">Videoer</a></li>
-                <li><a href="../Kurs/apache/apache.html">Apache</a></li>
-                <li><a href="#">Kontakt</a></li>
-            </ul>
-            <div class="navbar-toggle" id="navbar-toggle">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-        </nav>
-    </header>
+    <body>
+        <header>
+            <nav class="navbar">
+                <div class="navbar-logo">SECKER</div>
+                <ul class="navbar-menu" id="navLinks">
+                    <li><a href="../index.html">Hjem</a></li>
+                    <li><a href="../video/video.html">Videoer</a></li>
+                    <li><a href="../apache/apache.html">Apache</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+                <div class="navbar-toggle" id="navbar-toggle">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </nav>
+        </header>
     
 
         <video id="videoElement" preload="auto" autoplay muted loop>
-            <source src="../Bilder/Screencast from 13. okt. 2023 kl. 12.26 +0200.webm" type="video/mp4">
+            <source src="../Bilder/GuideVideo.mp4" type="video/mp4">
             Din nettleser støtter ikke videoelementet.
         </video>
         <div class="cover" id="cover">
