--- a/apache/apache.html
+++ b/apache/apache.html
@@ -1,58 +1,100 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apache Brukerguide</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Apache VMware Guide</title>
+    <link rel="stylesheet" href="apache.css">
 </head>
 <body>
-<div id="content">
-    <!-- Introduksjon -->
-    <section id="introduction">
-        <h2>Introduksjon til Apache</h2>
-        <p>
-            Apache HTTP Server er en åpen kildekode webserver som har blitt svært populær på grunn av dens ytelse, sikkerhet og modulæritet. Denne guiden gir deg en grunnleggende forståelse av hvordan du setter opp og konfigurerer Apache.
-        </p>
-    </section>
 
-    <!-- Guide Steg -->
-    <section id="guide">
-        <h2>Steg-for-steg guide</h2>
-        <ul id="guideSteps">
-            <li data-image="image1.jpg">Steg 1: Installer Apache</li>
-            <li data-image="image2.jpg">Steg 2: Konfigurer Apache</li>
-            <li data-image="image3.jpg">Steg 3: Legg til dine nettsteder</li>
-        </ul>
-        <img id="imageDisplay" src="" alt="Demonstrasjonsbilde">
-    </section>
+    <body>
+        <header>
+            <nav class="navbar">
+                <div class="navbar-logo">SECKER</div>
+                <ul class="navbar-menu" id="navLinks">
+                    <li><a href="../index.html">Hjem</a></li>
+                    <li><a href="../video/video.html">Videoer</a></li>
+                    <li><a href="../apache/apache.html">Apache</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+                <div class="navbar-toggle" id="navbar-toggle">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </nav>
+        </header>
 
-    <!-- FAQs -->
-    <section id="faqs">
-        <h2>Ofte stilte spørsmål</h2>
-        <dl>
-            <dt>Hvor kan jeg laste ned Apache?</dt>
-            <dd>Du kan laste ned Apache fra det offisielle <a href="https://httpd.apache.org/">Apache HTTP Server-nettstedet</a>.</dd>
-            <dt>Hvordan starter jeg Apache-serveren?</dt>
-            <dd>Du kan starte Apache-serveren ved å bruke kommandoen `httpd` i terminalen.</dd>
-            <!-- Legg til flere spørsmål etter behov -->
-        </dl>
-    </section>
+</header>
+<h1>Guide for å Installere Apache på VMware</h1>
 
-    <!-- Ressurser -->
-    <section id="resources">
-        <h2>Nyttige ressurser</h2>
-        <ul>
-            <li><a href="https://httpd.apache.org/docs/">Apache offisiell dokumentasjon</a></li>
-            <li><a href="https://www.apache.org/">Apache Software Foundation</a></li>
-        </ul>
-    </section>
+<section>
+    <h2>Installer Apache Web Server</h2>
+    <p>Først må vi oppdatere pakkelistene for de nyeste versjonene av pakker og deres avhengigheter:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo apt update" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
 
-    <!-- Footer -->
-    <footer>
-        Denne guiden ble opprettet av [Ditt navn eller firma]. Alle rettigheter forbeholdt.
-    </footer>
-</div>
-<script src="script.js"></script>
+    <p>Deretter kan vi installere Apache2-pakken:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo apt install apache2" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+</section>
+
+<section>
+    <h2>Start og Aktiver Apache</h2>
+    <p>For å starte Apache2 webserveren, kjør følgende kommando:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo systemctl start apache2" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+
+    <p>For å sikre at Apache2 starter automatisk ved oppstart:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo systemctl enable apache2" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+</section>
+
+<section>
+    <h2>Host din nettside</h2>
+    <p>Opprett en mappe for din nettside:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo mkdir /var/www/html/mywebsite" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+
+    <p>Naviger til den nye mappen:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="cd /var/www/html/mywebsite" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+
+    <p>Lag en grunnleggende index.html fil:</p>
+    <div class="command-container">
+        <div class="command">
+            <input type="text" readonly value="sudo nano index.html" />
+            <button onclick="copyCommand(this)">Kopier</button>
+        </div>
+    </div>
+</section>
+
+<script src="apache.js"></script>
+
 </body>
 </html>
